@@ -535,62 +535,6 @@ public:
     QAbstractItemView *treeView;
 };
 
-#if 0
-// NOTE: was to be used for table style playlists page, but actions overlap text in last column :-(
-class TableDelegate : public ActionItemDelegate
-{
-public:
-    TableDelegate(QAbstractItemView *p)
-        : ActionItemDelegate(p)
-    {
-    }
-
-    virtual ~TableDelegate()
-    {
-    }
-
-    void paint(QPainter *painter, const QStyleOptionViewItem &option, const QModelIndex &index) const
-    {
-        if (!index.isValid()) {
-            return;
-        }
-        bool selected=option.state&QStyle::State_Selected;
-        bool active=option.state&QStyle::State_Active;
-        QStyledItemDelegate::paint(painter, option, index);
-        QColor col(option.palette.color(active ? QPalette::Active : QPalette::Inactive,
-                                        selected ? QPalette::HighlightedText : QPalette::Text));
-
-
-        if (4==option.version) {
-            bool drawActions=false;
-            const QStyleOptionViewItemV4 &v4=(QStyleOptionViewItemV4 &)option;
-
-            switch (v4.viewItemPosition) {
-            case QStyleOptionViewItemV4::Beginning:
-                BasicItemDelegate::drawLine(painter, option.rect, col, true, false);
-                break;
-            case QStyleOptionViewItemV4::Middle:
-                BasicItemDelegate::drawLine(painter, option.rect, col, false, false);
-                break;
-            case QStyleOptionViewItemV4::End:
-                BasicItemDelegate::drawLine(painter, option.rect, col, false, true);
-                drawActions=true;
-                break;
-            case QStyleOptionViewItemV4::Invalid:
-            case QStyleOptionViewItemV4::OnlyOne:
-                drawActions=true;
-                BasicItemDelegate::drawLine(painter, option.rect, col, true, true);
-            }
-            if (drawActions && underMouse && option.state&QStyle::State_MouseOver) {
-                drawIcons(painter, option.rect, true, QApplication::isRightToLeft(), AP_HMiddle, index);
-            }
-        } else {
-            BasicItemDelegate::drawLine(painter, option.rect, col, false, false);
-        }
-    }
-};
-#endif
-
 ItemView::Mode ItemView::toMode(const QString &str)
 {
     for (int i=0; i<Mode_Count; ++i) {
