@@ -32,14 +32,12 @@
 #include "support/localize.h"
 #include "support/spinner.h"
 #include "messageoverlay.h"
-#include "basicitemdelegate.h"
 #include "icons.h"
 #include "support/gtkstyle.h"
 #include "support/proxystyle.h"
 #include "support/actioncollection.h"
 #include "support/action.h"
 #include "models/roles.h"
-#include "widgets/ratingwidget.h"
 #include <QFile>
 #include <QPainter>
 #include <QApplication>
@@ -47,51 +45,6 @@
 
 // Exported by QtGui
 void qt_blurImage(QPainter *p, QImage &blurImage, qreal radius, bool quality, bool alphaOnly, int transposed = 0);
-
-class PlayQueueTreeViewItemDelegate : public BasicItemDelegate
-{
-public:
-    PlayQueueTreeViewItemDelegate(QObject *p) : BasicItemDelegate(p), ratingPainter(0) { }
-    virtual ~PlayQueueTreeViewItemDelegate() { delete ratingPainter; }
-    void paint(QPainter *painter, const QStyleOptionViewItem &option, const QModelIndex &index) const
-    {
-        if (!index.isValid()) {
-            return;
-        }
-
-        QStyleOptionViewItemV4 v4((QStyleOptionViewItemV4 &)option);
-        if (QStyleOptionViewItemV4::Beginning==v4.viewItemPosition) {
-            v4.icon=index.data(Cantata::Role_Decoration).value<QIcon>();
-            if (!v4.icon.isNull()) {
-                v4.features |= QStyleOptionViewItemV2::HasDecoration;
-                v4.decorationSize=v4.icon.actualSize(option.decorationSize, QIcon::Normal, QIcon::Off);
-            }
-        }
-
-        BasicItemDelegate::paint(painter, v4, index);
-
-        if (index.column()==PlayQueueModel::COL_RATING) {
-            Song song=index.data(Cantata::Role_SongWithRating).value<Song>();
-            if (song.rating>0 && song.rating<=Song::Rating_Max) {
-                const QRect &r=option.rect;
-                if (!ratingPainter) {
-                    ratingPainter=new RatingPainter(r.height()-4);
-                    ratingPainter->setColor(option.palette.color(QPalette::Active, QPalette::Text));
-                }
-                painter->save();
-                painter->setOpacity(painter->opacity()*0.75);
-                painter->setClipRect(r);
-                const QSize &ratingSize=ratingPainter->size();
-                QRect ratingRect(r.x()+(r.width()-ratingSize.width())/2, r.y()+(r.height()-ratingSize.height())/2,
-                                 ratingSize.width(), ratingSize.height());
-                ratingPainter->paint(painter, ratingRect, song.rating);
-                painter->restore();
-            }
-        }
-    }
-
-    mutable RatingPainter *ratingPainter;
-};
 
 PlayQueueTreeView::PlayQueueTreeView(PlayQueueView *parent)
     : TableView(QLatin1String("playQueue"), parent, true)
@@ -101,7 +54,6 @@ PlayQueueTreeView::PlayQueueTreeView(PlayQueueView *parent)
     setItemsExpandable(false);
     setExpandsOnDoubleClick(false);
     setRootIsDecorated(false);
-    setItemDelegate(new PlayQueueTreeViewItemDelegate(this));
 }
 
 void PlayQueueTreeView::paintEvent(QPaintEvent *e)
